istio/1-basic-istio/0-namespace.yaml
---
# Apply only. No need to delete
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: default
